Created open class for the mobile menu.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="nav">
                 <div class="nav-wrapper">
-                    <ul>
+                    <ul class="open">
                         <li>
                             <a href="#one">One</a>
                         </li>
